fix line spacing in library

--- a/static/stylesheets/library.scss
+++ b/static/stylesheets/library.scss
@@ -3,8 +3,8 @@
 
 	ul.books {
 		li {
-			margin: 12px 0;
-
+			margin: 16px 0;
+			line-height: 24px;
 		}
 
 		li.recommended span.title {
